2011-10-18  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: fix Matrix problem
	* src/interp/ax.boot: fix "not" precedence

2011-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/u32vec.spad.pamphlet,
	src/interp/primitives.lisp: Add matrices of machine
	integers.
	src/algebra/Makefile.in: Adjust.

2011-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/numarr.spad.pamphlet: Add 'elt' and 'setelt.

2011-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pfo.spad.pamphlet: kgetGoodPrime(): avoid
	wild ramification.

2011-10-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/postpar.boot,
	src/interp/s-parser.boot, src/interp/br-op2.boot:
	Fix problem with missing descriptions in HyperDoc.

2011-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Do not abort on braces.

2011-09-29  Franz Lehner  <lehner@math.tugraz.at>

	* src/algebra/distro.spad.pamphlet,
	src/input/distro.input.pamphlet: Provide monotone cumulants

2011-09-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/distro.spad.pamphlet: Provide 'coerce' and
	'mapall' instead of 'map'.

2011-09-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sfsfun.boot: Remove useless underscores.

2011-09-26  Franz Lehner  <lehner@math.tugraz.at>

	* src/algebra/distro.spad.pamphlet,
	src/input/distro.input.pamphlet: cleanup and new functionality

2011-09-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad.pamphlet: Improve algebraic
	function integration.

2011-09-22  Martin Baker <ax87438@martinb.com>

	* computation.spad.pamphlet: Update.

2011-09-15  Franz Lehner  <lehner@math.tugraz.at>

	* src/algebra/distro.spad.pamphlet,
	src/input/distro.input.pamphlet: new package
	for manipulation of moments, cumulants and
	orthogonal polynomials.

2011-09-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/triset.spad.pamphlet,