@@ -1,3 +1,7 @@
+2011-10-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/hyper/macro.c: Fix crash due to unescaped '#'.
+
 2011-10-18  Ralf Hemmecke  <ralf@hemmecke.de>
 
 	* src/algebra/jet.spad.pamphlet: fix Matrix problem
